force-app/main/default/objects/Activity/fields/Acknowledged_Date__c.field-meta.xml
<CustomField>
    <fullName>Acknowledged_Date__c</fullName>
    <description>StarTrack - Date/Time when Task was Acknowledged</description>
    <label>Acknowledged Date</label>
    <type>DateTime</type>
</CustomField>