force-app/main/default/objects/Activity/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <formula>Owner:User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent</label>
    <type>Text</type>
</CustomField>