force-app/main/default/objects/Activity/fields/APT_Customer_Response__c.field-meta.xml
<CustomField>
    <fullName>APT_Customer_Response__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Response</label>
    <referenceTo>APT_Customer_Response__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>