force-app/main/default/objects/Activity/fields/Bulk__c.field-meta.xml
<CustomField>
    <fullName>Bulk__c</fullName>
    <label>Bulk</label>
    <length>255</length>
    <type>Text</type>
</CustomField>