force-app/main/default/objects/Activity/fields/Call_Log_Number__c.field-meta.xml
<CustomField>
    <fullName>Call_Log_Number__c</fullName>
    <description>Field used to store the incremented Call # number for Call Logs created for StarTrack cases</description>
    <label>Call Log Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>