force-app/main/default/objects/Activity/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <formula>IF(BEGINS(WhatId, &apos;500&apos;),WhatId,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case</label>
    <type>Text</type>
</CustomField>