force-app/main/default/objects/Activity/fields/Count_of_Events__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Events__c</fullName>
    <description>Count of Tasks. Created to replicate a formula field in the FSL package.</description>
    <formula>IF( IsTask,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count of Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>