force-app/main/default/objects/Activity/fields/CTIInteractionID__c.field-meta.xml
<CustomField>
    <fullName>CTIInteractionID__c</fullName>
    <externalId>true</externalId>
    <label>CTI Interaction ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>