force-app/main/default/objects/Activity/fields/Enquiry_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Sub_Type__c</fullName>
    <label>Enquiry Sub Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>