force-app/main/default/objects/Activity/fields/Enquiry_Type__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Type__c</fullName>
    <label>Enquiry Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Product Information</fullName>
            </value>
            <value>
                <fullName>Pricing Information</fullName>
            </value>
            <value>
                <fullName>Sales enquiries</fullName>
            </value>
            <value>
                <fullName>Post Office Information</fullName>
            </value>
            <value>
                <fullName>Tracking enquiries</fullName>
            </value>
            <value>
                <fullName>Service requests</fullName>
            </value>
            <value>
                <fullName>Feedback &amp; complaints</fullName>
            </value>
            <value>
                <fullName>Payment enquiries</fullName>
            </value>
            <value>
                <fullName>Online application support</fullName>
            </value>
            <value>
                <fullName>All other enquiries</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>