force-app/main/default/objects/Activity/fields/IsChannelManager__c.field-meta.xml
<CustomField>
    <fullName>IsChannelManager__c</fullName>
    <description>Field to determine if logged in user is the Channel Manager for Performance report used by reporting team.</description>
    <formula>(CreatedBy.Manager.ManagerId = $User.Id)</formula>
    <label>Is Senior Manager</label>
    <type>Checkbox</type>
</CustomField>