force-app/main/default/objects/Activity/fields/IsTeamManager__c.field-meta.xml
<CustomField>
    <fullName>IsTeamManager__c</fullName>
    <description>Field to determine if logged in user is the Team Manager for Performance report used by reporting team.</description>
    <formula>(CreatedBy.ManagerId = $User.Id)</formula>
    <label>Is Team Manager</label>
    <type>Checkbox</type>
</CustomField>