force-app/main/default/objects/Activity/fields/IWS_CallUUID__c.field-meta.xml
<CustomField>
    <fullName>IWS_CallUUID__c</fullName>
    <externalId>true</externalId>
    <label>IWS_CallUUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>