force-app/main/default/objects/Activity/fields/IWS_CaseUid__c.field-meta.xml
<CustomField>
    <fullName>IWS_CaseUid__c</fullName>
    <externalId>true</externalId>
    <label>IWS_CaseUid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>