force-app/main/default/objects/Activity/fields/kfsell__ActionPlanId__c.field-meta.xml
<CustomField>
    <fullName>kfsell__ActionPlanId__c</fullName>
    <label>ActionPlanId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>