force-app/main/default/objects/Activity/fields/ManagerLevel3__c.field-meta.xml
<CustomField>
    <fullName>ManagerLevel3__c</fullName>
    <formula>CreatedBy.Manager.Manager.Manager.FirstName &amp; &quot; &quot; &amp; CreatedBy.Manager.Manager.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager Level 3</label>
    <type>Text</type>
</CustomField>