force-app/main/default/objects/Activity/fields/Operations_Outcome_Comment__c.field-meta.xml
<CustomField>
    <fullName>Operations_Outcome_Comment__c</fullName>
    <formula>IF(ISBLANK(Operations_Outcome__c),&apos;&apos;,&apos;Operations Outcome: &apos; + Operations_Outcome__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Operations Outcome Comment</label>
    <type>Text</type>
</CustomField>