force-app/main/default/objects/Activity/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>SSSW and  StarTrack: Capture phone information for recent caller,Custom field was created because standard field is read only and can only be populated through lead/contact record.</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>