force-app/main/default/objects/Activity/fields/Pref_Method_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Pref_Method_of_Contact__c</fullName>
    <description>This will hold the selected method of contact from related case record.</description>
    <label>Preferred Method of Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>