force-app/main/default/objects/Activity/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Domestic Parcels</fullName>
            </value>
            <value>
                <fullName>Post Office Products &amp; Services</fullName>
            </value>
            <value>
                <fullName>Letter &amp; Parcel Delivery Services</fullName>
            </value>
            <value>
                <fullName>International Parcels</fullName>
            </value>
            <value>
                <fullName>Financial Products &amp; Services</fullName>
            </value>
            <value>
                <fullName>Domestic Letters</fullName>
            </value>
            <value>
                <fullName>International Letters</fullName>
            </value>
            <value>
                <fullName>Digital Products &amp; Services</fullName>
            </value>
            <value>
                <fullName>Courier Products &amp; Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>