force-app/main/default/objects/Activity/fields/Product_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Sub_Category__c</fullName>
    <label>Product Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>AirMail</fullName>
            </value>
            <value>
                <fullName>AirMail Parcels</fullName>
            </value>
            <value>
                <fullName>All other Delivery Services</fullName>
            </value>
            <value>
                <fullName>AMEX</fullName>
            </value>
            <value>
                <fullName>Australian Air Express</fullName>
            </value>
            <value>
                <fullName>Bank at Post</fullName>
            </value>
            <value>
                <fullName>Bulk Mail Services</fullName>
            </value>
            <value>
                <fullName>Carded Parcels (Collection Cards)</fullName>
            </value>
            <value>
                <fullName>Cash on Delivery</fullName>
            </value>
            <value>
                <fullName>Change of Address Notification</fullName>
            </value>
            <value>
                <fullName>Click &amp; Send</fullName>
            </value>
            <value>
                <fullName>Click &amp; Send Domestic Parcels</fullName>
            </value>
            <value>
                <fullName>Click &amp; Send International</fullName>
            </value>
            <value>
                <fullName>Delivery Choice</fullName>
            </value>
            <value>
                <fullName>Digital Mailbox</fullName>
            </value>
            <value>
                <fullName>Domestic Letter Insurance (Extra Cover)</fullName>
            </value>
            <value>
                <fullName>Domestic Parcel Insurance (Extra Cover)</fullName>
            </value>
            <value>
                <fullName>eParcel</fullName>
            </value>
            <value>
                <fullName>Express Courier International</fullName>
            </value>
            <value>
                <fullName>Express Courier International Platinum</fullName>
            </value>
            <value>
                <fullName>Express Post</fullName>
            </value>
            <value>
                <fullName>Express Post International</fullName>
            </value>
            <value>
                <fullName>Express Post Parcels</fullName>
            </value>
            <value>
                <fullName>Express Post Platinum</fullName>
            </value>
            <value>
                <fullName>Express Post Platinum Parcels</fullName>
            </value>
            <value>
                <fullName>Farmhouse Direct</fullName>
            </value>
            <value>
                <fullName>General Merchandise</fullName>
            </value>
            <value>
                <fullName>Gift cards</fullName>
            </value>
            <value>
                <fullName>Identity Services - All other</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>