force-app/main/default/objects/Activity/fields/ReferenceID__c.field-meta.xml
<CustomField>
    <fullName>ReferenceID__c</fullName>
    <description>SSSW Reference ID</description>
    <externalId>true</externalId>
    <inlineHelpText>The Reference ID for this Task. i.e Article ID or MRS CRN.</inlineHelpText>
    <label>Reference ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>