force-app/main/default/objects/Activity/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Manually completed by the owner/acct mgr/seller once the event is ACTUALLY completed. This drives the completion count for &quot;Event&quot; type activities</description>
    <inlineHelpText>Manually completed by the owner/acct mgr/seller once the event is ACTUALLY completed. This drives the completion count for &quot;Event&quot; type activities</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Waiting on someone else</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>