force-app/main/default/objects/Activity/fields/Target_Call_Cycle_Met__c.field-meta.xml
<CustomField>
    <fullName>Target_Call_Cycle_Met__c</fullName>
    <formula>IF(  Days_Since_Last_Acty__c  &gt;= 0, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Call Cycle Met?</label>
    <type>Checkbox</type>
</CustomField>