force-app/main/default/objects/Activity/fields/Target_Skill__c.field-meta.xml
<CustomField>
    <fullName>Target_Skill__c</fullName>
    <label>Target Skill</label>
    <length>255</length>
    <type>Text</type>
</CustomField>