force-app/main/default/objects/Activity/listViews/All_My_Events.listView-meta.xml
<ListView>
    <fullName>All_My_Events</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>Category__c</columns>
    <columns>TASK.TYPE</columns>
    <columns>EVENT.START_DATE_TIME</columns>
    <columns>EVENT.END_DATE_TIME</columns>
    <columns>Status__c</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>TASK.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Event.Sales_Event,Event.Default_Events</value>
    </filters>
    <label>All My Events</label>
    <language>en_US</language>
    <sharedTo>
        <group>All_Users_Ex_SSSW</group>
    </sharedTo>
</ListView>