force-app/main/default/objects/Activity/listViews/All_My_Tasks.listView-meta.xml
<ListView>
    <fullName>All_My_Tasks</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>Category__c</columns>
    <columns>TASK.TYPE</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>TASK.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Task.Sales_Task,Task.Default_Taks</value>
    </filters>
    <label>All My Tasks</label>
    <sharedTo>
        <group>All_Users_Ex_SSSW</group>
    </sharedTo>
</ListView>