force-app/main/default/objects/Activity/listViews/Manage_My_Tasks.listView-meta.xml
<ListView>
    <fullName>Manage_My_Tasks</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>Category__c</columns>
    <columns>TASK.TYPE</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>TASK.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Task.Sales_Task</value>
    </filters>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>TASK.CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>7/1/2015 12:00 AM</value>
    </filters>
    <label>Manage My Tasks (No Category)</label>
    <sharedTo>
        <group>All_Users_Ex_SSSW</group>
    </sharedTo>
</ListView>