force-app/main/default/objects/Activity/listViews/my_Activities_With_Green_Sheets.listView-meta.xml
<ListView>
    <fullName>my_Activities_With_Green_Sheets</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>Category__c</columns>
    <columns>TASK.TYPE</columns>
    <columns>EVENT.START_DATE_TIME</columns>
    <columns>EVENT.END_DATE_TIME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>mh_Green_Sheet_Created_Date__c</columns>
    <columns>mh_Last_Updated_Green_Sheet__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>mh_Associated_Green_Sheet__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Activities With Green Sheets</label>
    <language>en_US</language>
    <sharedTo>
        <group>All_Users_Ex_SSSW</group>
        <group>All_Users_Ex_StarTrack</group>
    </sharedTo>
</ListView>